# romicgal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: pull_request.yml  push.yml
conda/: pkg_build.sh  upload.sh
conda-recipe/: build.sh  meta.yaml
conda/env/: romicgal.yaml
conda/recipe/: build.sh  conda_build_config.yaml  meta.yaml
docker/: Dockerfile  build.sh  run.sh
sample/: PointCloud.ply  TriangleMesh.ply  mesh.ply
src/: cgal_skel.cc
test/: test.py  test_romicgal.py
