[build-system]
requires = [
    "setuptools >=42",
    "pybind11 >=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = 'romicgal'
version = '0.1.1'
dependencies = [
    "numpy",
    "open3d >=0.9.0",
]
description = "Python CGAL bindings for skeletonization."
readme = "README.md"
requires-python = ">=3.8"
license = { 'text' = "LGPL-3.0-or-later" }   # to replace by "LGPL-3.0-or-later" only in next release, pending deprecation
authors = [
    { name = "Peter Hanappe", email = "peter.hanappe@sony.com" },
    { name = "Timothée Wintz", email = "timothee@timwin.fr" },
]
maintainers = [
    { name = "Jonathan Legrand", email = "jonathan.legrand@ens-lyon.fr" }
]
keywords = [
    "Robotics for Microfarms",
    "ROMI",
    "Skeletonization",
    "Point-cloud",
    "CGAL",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
minversion = "6.0"
# List of command-line flags here:
# https://docs.pytest.org/en/stable/reference/reference.html#command-line-flags
addopts = "-ra"
testpaths = ["test",]
